seaqt/QtWidgets/gen_qtablewidget.h

typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QWidget QWidget;
typedef struct VirtualQTableWidget VirtualQTableWidget;
typedef struct QTableWidget_VTable{
	void (*destructor)(VirtualQTableWidget* self);
	QMetaObject* (*metaObject)(const VirtualQTableWidget* self);
	void* (*metacast)(VirtualQTableWidget* self, const char* param1);
	int (*metacall)(VirtualQTableWidget* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTableWidget* self, QEvent* e);
	struct miqt_array /* of struct miqt_string */  (*mimeTypes)(const VirtualQTableWidget* self);
	QMimeData* (*mimeData)(const VirtualQTableWidget* self, struct miqt_array /* of QTableWidgetItem* */  items);
	bool (*dropMimeData)(VirtualQTableWidget* self, int row, int column, QMimeData* data, int action);
	int (*supportedDropActions)(const VirtualQTableWidget* self);
	void (*dropEvent)(VirtualQTableWidget* self, QDropEvent* event);
	void (*setRootIndex)(VirtualQTableWidget* self, QModelIndex* index);
	void (*setSelectionModel)(VirtualQTableWidget* self, QItemSelectionModel* selectionModel);
	void (*doItemsLayout)(VirtualQTableWidget* self);
	QRect* (*visualRect)(const VirtualQTableWidget* self, QModelIndex* index);
	void (*scrollTo)(VirtualQTableWidget* self, QModelIndex* index, int hint);
	QModelIndex* (*indexAt)(const VirtualQTableWidget* self, QPoint* p);
	void (*scrollContentsBy)(VirtualQTableWidget* self, int dx, int dy);
	void (*initViewItemOption)(const VirtualQTableWidget* self, QStyleOptionViewItem* option);
	void (*paintEvent)(VirtualQTableWidget* self, QPaintEvent* e);
	void (*timerEvent)(VirtualQTableWidget* self, QTimerEvent* event);
	int (*horizontalOffset)(const VirtualQTableWidget* self);
	int (*verticalOffset)(const VirtualQTableWidget* self);
	QModelIndex* (*moveCursor)(VirtualQTableWidget* self, int cursorAction, int modifiers);
	void (*setSelection)(VirtualQTableWidget* self, QRect* rect, int command);
	QRegion* (*visualRegionForSelection)(const VirtualQTableWidget* self, QItemSelection* selection);
	struct miqt_array /* of QModelIndex* */  (*selectedIndexes)(const VirtualQTableWidget* self);
	void (*updateGeometries)(VirtualQTableWidget* self);
	QSize* (*viewportSizeHint)(const VirtualQTableWidget* self);
	int (*sizeHintForRow)(const VirtualQTableWidget* self, int row);
	int (*sizeHintForColumn)(const VirtualQTableWidget* self, int column);
	void (*verticalScrollbarAction)(VirtualQTableWidget* self, int action);
	void (*horizontalScrollbarAction)(VirtualQTableWidget* self, int action);
	bool (*isIndexHidden)(const VirtualQTableWidget* self, QModelIndex* index);
	void (*selectionChanged)(VirtualQTableWidget* self, QItemSelection* selected, QItemSelection* deselected);
	void (*currentChanged)(VirtualQTableWidget* self, QModelIndex* current, QModelIndex* previous);
	void (*keyboardSearch)(VirtualQTableWidget* self, struct miqt_string search);
	QAbstractItemDelegate* (*itemDelegateForIndex)(const VirtualQTableWidget* self, QModelIndex* index);
	QVariant* (*inputMethodQuery)(const VirtualQTableWidget* self, int query);
	void (*reset)(VirtualQTableWidget* self);
	void (*selectAll)(VirtualQTableWidget* self);
	void (*dataChanged)(VirtualQTableWidget* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
	void (*rowsInserted)(VirtualQTableWidget* self, QModelIndex* parent, int start, int end);
	void (*rowsAboutToBeRemoved)(VirtualQTableWidget* self, QModelIndex* parent, int start, int end);
	void (*updateEditorData)(VirtualQTableWidget* self);
	void (*updateEditorGeometries)(VirtualQTableWidget* self);
	void (*verticalScrollbarValueChanged)(VirtualQTableWidget* self, int value);
	void (*horizontalScrollbarValueChanged)(VirtualQTableWidget* self, int value);
	void (*closeEditor)(VirtualQTableWidget* self, QWidget* editor, int hint);
	void (*commitData)(VirtualQTableWidget* self, QWidget* editor);
	void (*editorDestroyed)(VirtualQTableWidget* self, QObject* editor);
	bool (*edit2)(VirtualQTableWidget* self, QModelIndex* index, int trigger, QEvent* event);
	int (*selectionCommand)(const VirtualQTableWidget* self, QModelIndex* index, QEvent* event);
	void (*startDrag)(VirtualQTableWidget* self, int supportedActions);
	bool (*focusNextPrevChild)(VirtualQTableWidget* self, bool next);
	bool (*viewportEvent)(VirtualQTableWidget* self, QEvent* event);
	void (*mousePressEvent)(VirtualQTableWidget* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQTableWidget* self, QMouseEvent* event);
	void (*mouseReleaseEvent)(VirtualQTableWidget* self, QMouseEvent* event);
	void (*mouseDoubleClickEvent)(VirtualQTableWidget* self, QMouseEvent* event);
	void (*dragEnterEvent)(VirtualQTableWidget* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQTableWidget* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQTableWidget* self, QDragLeaveEvent* event);
	void (*focusInEvent)(VirtualQTableWidget* self, QFocusEvent* event);
	void (*focusOutEvent)(VirtualQTableWidget* self, QFocusEvent* event);
	void (*keyPressEvent)(VirtualQTableWidget* self, QKeyEvent* event);
	void (*resizeEvent)(VirtualQTableWidget* self, QResizeEvent* event);
	void (*inputMethodEvent)(VirtualQTableWidget* self, QInputMethodEvent* event);
	bool (*eventFilter)(VirtualQTableWidget* self, QObject* object, QEvent* event);
	QSize* (*minimumSizeHint)(const VirtualQTableWidget* self);
	QSize* (*sizeHint)(const VirtualQTableWidget* self);
	void (*setupViewport)(VirtualQTableWidget* self, QWidget* viewport);
	void (*wheelEvent)(VirtualQTableWidget* self, QWheelEvent* param1);
	void (*contextMenuEvent)(VirtualQTableWidget* self, QContextMenuEvent* param1);
	void (*changeEvent)(VirtualQTableWidget* self, QEvent* param1);
	void (*initStyleOption)(const VirtualQTableWidget* self, QStyleOptionFrame* option);
	int (*devType)(const VirtualQTableWidget* self);
	void (*setVisible)(VirtualQTableWidget* self, bool visible);
	int (*heightForWidth)(const VirtualQTableWidget* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQTableWidget* self);
	QPaintEngine* (*paintEngine)(const VirtualQTableWidget* self);
	void (*keyReleaseEvent)(VirtualQTableWidget* self, QKeyEvent* event);
	void (*enterEvent)(VirtualQTableWidget* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQTableWidget* self, QEvent* event);
	void (*moveEvent)(VirtualQTableWidget* self, QMoveEvent* event);
	void (*closeEvent)(VirtualQTableWidget* self, QCloseEvent* event);
	void (*tabletEvent)(VirtualQTableWidget* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQTableWidget* self, QActionEvent* event);
	void (*showEvent)(VirtualQTableWidget* self, QShowEvent* event);
	void (*hideEvent)(VirtualQTableWidget* self, QHideEvent* event);
	bool (*nativeEvent)(VirtualQTableWidget* self, struct miqt_string eventType, void* message, intptr_t* result);
	int (*metric)(const VirtualQTableWidget* self, int param1);
	void (*initPainter)(const VirtualQTableWidget* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQTableWidget* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQTableWidget* self);
	void (*childEvent)(VirtualQTableWidget* self, QChildEvent* event);
	void (*customEvent)(VirtualQTableWidget* self, QEvent* event);
	void (*connectNotify)(VirtualQTableWidget* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTableWidget* self, QMetaMethod* signal);
}QTableWidget_VTable;
const QTableWidget_VTable* QTableWidget_vtbl(const VirtualQTableWidget* self);
void* QTableWidget_vdata(const VirtualQTableWidget* self);
void QTableWidget_closePersistentEditor(QTableWidget* self, QTableWidgetItem* item);
bool QTableWidget_isPersistentEditorOpen(const QTableWidget* self, QTableWidgetItem* item);
QWidget* QTableWidget_cellWidget(const QTableWidget* self, int row, int column);
void QTableWidget_setCellWidget(QTableWidget* self, int row, int column, QWidget* widget);
void QTableWidget_removeCellWidget(QTableWidget* self, int row, int column);
void QTableWidget_setRangeSelected(QTableWidget* self, QTableWidgetSelectionRange* range, bool select);
struct miqt_array /* of QTableWidgetSelectionRange* */  QTableWidget_selectedRanges(const QTableWidget* self);
struct miqt_array /* of QTableWidgetItem* */  QTableWidget_selectedItems(const QTableWidget* self);
struct miqt_array /* of QTableWidgetItem* */  QTableWidget_findItems(const QTableWidget* self, struct miqt_string text, int flags);
int QTableWidget_visualRow(const QTableWidget* self, int logicalRow);
int QTableWidget_visualColumn(const QTableWidget* self, int logicalColumn);
QTableWidgetItem* QTableWidget_itemAt(const QTableWidget* self, QPoint* p);
QTableWidgetItem* QTableWidget_itemAt2(const QTableWidget* self, int x, int y);
QRect* QTableWidget_visualItemRect(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_itemPrototype(const QTableWidget* self);
void QTableWidget_setItemPrototype(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_scrollToItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_insertRow(QTableWidget* self, int row);
void QTableWidget_insertColumn(QTableWidget* self, int column);
void QTableWidget_removeRow(QTableWidget* self, int row);
void QTableWidget_removeColumn(QTableWidget* self, int column);
void QTableWidget_clear(QTableWidget* self);
void QTableWidget_clearContents(QTableWidget* self);
void QTableWidget_itemPressed(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemDoubleClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemActivated(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemEntered(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemChanged(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_currentItemChanged(QTableWidget* self, QTableWidgetItem* current, QTableWidgetItem* previous);
void QTableWidget_connect_currentItemChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, QTableWidgetItem*, QTableWidgetItem*), void (*release)(intptr_t));
void QTableWidget_itemSelectionChanged(QTableWidget* self);
void QTableWidget_connect_itemSelectionChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QTableWidget_cellPressed(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellPressed(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_cellClicked(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_cellDoubleClicked(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellDoubleClicked(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_cellActivated(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellActivated(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_cellEntered(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellEntered(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_cellChanged(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QTableWidget_currentCellChanged(QTableWidget* self, int currentRow, int currentColumn, int previousRow, int previousColumn);
void QTableWidget_connect_currentCellChanged(VirtualQTableWidget* self, intptr_t slot, void (*callback)(intptr_t, int, int, int, int), void (*release)(intptr_t));
struct miqt_string QTableWidget_tr2(const char* s, const char* c);
struct miqt_string QTableWidget_tr3(const char* s, const char* c, int n);
void QTableWidget_sortItems2(QTableWidget* self, int column, int order);
void QTableWidget_scrollToItem2(QTableWidget* self, QTableWidgetItem* item, int hint);